--- a/api/package.json
+++ b/api/package.json
@@ -6,9 +6,8 @@
   "engines": {
     "node": "20.11.1"
   },
-  "type": "module",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
+    "dev": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,13 +18,5 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
-    "tsx": "^4.7.2",
-    "typescript": "^5.4.5"
   }
 }
