--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
     "node": "20.11.1"
   },
   "scripts": {
+    "start": "node src/server.js",
     "dev": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +18,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "prisma": "^5.14.0"
   }
 }
