--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
   "author": "advec-dev-team",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.14.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
